[project]
name = "langchain-mtuci"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "MisterEblan", email = "boy4rov.da@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "langchain>=1.0.8",
    "mtuci-private-api>=0.1.2",
]

[build-system]
requires = ["uv_build>=0.9.9,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "dotenv>=0.9.9",
    "pylint>=4.0.3",
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
]
